--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 }
 </style>
 <body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <script>
 var dispatch = d3.dispatch("load", "statechange");
 var groups = [
