--- a/area/index.html
+++ b/area/index.html
@@ -12,7 +12,7 @@
 }
 </style>
 <body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <script>
 var dispatch = d3.dispatch("load", "statechange");
 var groups = [
@@ -25,7 +25,7 @@ var groups = [
   "Mountain with frost",
   "Mountain without frost"
 ];
-d3.csv("dataarea.csv", type, function(error, states) {
+d3.csv("data.csv", type, function(error, states) {
   if (error) throw error;
   var stateById = d3.map();
   states.forEach(function(d) { stateById.set(d.id, d); });
