--- a/pop/index.html
+++ b/pop/index.html
@@ -12,7 +12,8 @@
 }
 </style>
 <body>
-<script src="https://d3js.org/d3.v3.min.js"></script>
+<script src="//edit.cms.unibe.ch/++resource++zms_/iframeresizer/iframeResizer.contentWindow.min.js"></script>
+<script src="//d3js.org/d3.v3.min.js"></script>
 <script>
 var dispatch = d3.dispatch("load", "statechange");
 var groups = [
